syntax = "proto3";

package sa;
option go_package = "github.com/letsencrypt/boulder/sa/proto";

// Used internally for storage in the DB, not for RPCs.
message Authzs {
  repeated int64 authzIDs = 1;
}
